--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <body>
         
         <div id='welcome' class='container-fluid'>
-            <figure class=''>
-                <h1>Thanks for checking out</h1>
-                <h1>codeBy<span>Pe</span>te</h1>
+            <figure class='fadeIn1'>
+                <h1 class='fadeIn2'>Thanks for checking out</h1>
+                <h1 class='fadeIn2'>codeBy<span class='fadeIn3'>Pe</span>te</h1>
                 <hr>
-                <h3>This page is currently under construction...</h3>
+                <h3 class='fadeIn3'>This page is currently under construction...</h3>
             </figure>
         </div>
     
