opaque welcome background

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
     <body>
         
-        <div id='welcome' class='container-fluid'>
+        <div id='welcome' class='container-fluid fadeIn1'>
             <figure class='fadeIn1'>
                 <h1 class='fadeIn2'>Thanks for checking out</h1>
                 <h1 class='fadeIn2'>codeBy<span class='fadeIn3'>Pe</span>te</h1>
