--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <body>
         
         <div id='welcome' class='container-fluid fadeIn1'>
-            <figure class='fadeIn1'>
+            <figure class=''>
                 <h1 class='fadeIn2'>Thanks for checking out</h1>
                 <h1 class='fadeIn2'>codeBy<span class='fadeIn3'>Pe</span>te</h1>
                 <hr>
-                <h3 class='fadeIn3'>This page is currently under construction...</h3>
+                <h4 class='fadeIn2'>This page is currently under construction...</h4>
             </figure>
         </div>
     
