--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- My CSS & JS -->
     <link rel="stylesheet" href="./style.css">
     <script src='./index.js' defer></script>
-    <!-- <link rel="shortcut icon" type='image/x-icon' href="./favicon.ico"> -->
+    <link rel="shortcut icon" type='image/x-icon' href="./favicon.ico">
 
     <title>codeByPete</title>
 </head>
