better animation timing and colors in welcome

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id='welcome' class='container-fluid fadeIn1'>
             <figure class=''>
                 <h1 class='fadeIn2'>Thanks for checking out</h1>
-                <h1 class='fadeIn2'>codeBy<span class='fadeIn3'>Pe</span>te</h1>
+                <h1><span class='fadeIn2'>code</span><span>By</span><span class='fadeIn3'>Pe</span><span class='fadeIn4'>te</span></h1>
                 <hr>
                 <h4 class='fadeIn3'>This page is currently under construction...</h4>
             </figure>
