better welcome animations using keyframes

--- a/index.html
+++ b/index.html
@@ -28,12 +28,20 @@
 </head>
     <body>
         
-        <div id='welcome' class='container-fluid fadeIn1'>
+        <!-- <div id='welcome' class='container-fluid fadeIn1'>
             <figure class=''>
                 <h1 class='fadeIn2'>Thanks for checking out</h1>
                 <h1><span class='fadeIn2'>code</span><span>By</span><span class='fadeIn3'>Pe</span><span class='fadeIn4'>te</span></h1>
                 <hr>
                 <h4 class='fadeIn3'>This page is currently under construction...</h4>
+            </figure>
+        </div> -->
+        <div id='welcome' class='container-fluid animationBorder'>
+            <figure class=''>
+                <h1 class='animationDropDown'>Thanks for checking out</h1>
+                <h1  class='animationSlideFromLeft'><span>code</span><span>By</span><span class='animationExpand'>Pe</span><span class='animationTurnGreen'>te</span></h1>
+                <hr>
+                <h4 class='animationFlipIn'>This page is currently under construction...</h4>
             </figure>
         </div>
     
