--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div> -->
         <div id='welcome' class='container-fluid animationBorder'>
             <figure class=''>
-                <h1 class='animationDropDown'>Thanks for checking out</h1>
+                <h1 class='animationDropDown'><span class='animationTurnOpaque'>Thanks for checking out</span></h1>
                 <h1  class='animationSlideFromLeft'><span>code</span><span>By</span><span class='animationExpand'>Pe</span><span class='animationTurnGreen'>te</span></h1>
                 <hr>
                 <h4 class='animationFlipIn'>This page is currently under construction...</h4>
