--- a/dev.html
+++ b/dev.html
@@ -8,7 +8,7 @@
         <meta name='description' content='LeNova, Inc. Professional Engineering Services'>
 
         <!-- Bootstrap Link -->
-        <link rel="stylesheet" href="./plugins/bootstrap.min.css">
+        <link rel="stylesheet" href="./libraries/bootstrap.min.css">
 
         <!-- Font CSS Links -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
         <script src="./libraries/ScrollMagic.min.js"></script>
 
         <!-- My CSS & JS -->
-        <link rel="stylesheet" href="./css/construction.css">
+        <link rel="stylesheet" href="./css/style.css">
         <script src='./index.js' defer></script>
         <link rel="shortcut icon" type='image/x-icon' href="./favicon.ico">
 
@@ -37,9 +37,9 @@
             </figure>
         </div>
 
-        <figure class=''>
+        <!-- <figure class=''>
             <h4 class='animationFlipIn'>This page is currently under construction...</h4>
-        </figure>
+        </figure> -->
         
         <footer class="container-fluid">
             <p>Copyright © 
