--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
         <figure class=''>
             <h4 class='animationFlipIn'>This page is currently under construction...</h4>
         </figure>
+
+        <div id='article1' class="container-fluid">
+            <h2 class="">Creating a Personal Website on GitHub</h2>
+            <p>Hello World! Pun intended. :)</p>
+            <p>My name is Pete and this is my first blog post.  I am enrolled in a Full Stack coding bootcamp and one of our first assignments is to develop a set of instructions for creating a personal GitHub page.</p>
+            <p>As I prepared for this bootcamp, I used some free online resources like <a href="www.theodinproject.com">The Odin Project</a> and <a href="'www.freecodecamp.org">freeCodeCamp.org</a>.  Thank you both for making this coding knowledge so easily accessible!</p>
+            <ol>
+                <li><span style="text-decoration:underline;">Set up Git</span>: I did this on Mac and used <a href="'https://docs.brew.sh/Installation#macos-requirements">Homebrew</a>.  The full lesson can be found here: <a href="https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/setting-up-git">The Odin Project</a>.</li>
+                <li><span style="text-decoration:underline;">Set up a Git Repository</span>: I did this for the first time using the terminal command line.  It reminded me of using MS DOS when I was younger.  As I continued to make Git Repositories, I transitioned to using the GitHub Desktop App, as well as the Visual Studio Code Extension.  The full lesson can be found here: <a href="https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/git-basics">The Odin Project</a>.</li>
+                <li><span style="text-decoration:underline;">Create index.html</span>: This should include the content of your website.  You may want to include some optional CSS for aesthetics.  Check out the Responsive Web Design Course at <a href="www.freecodecamp.org">freeCodeCamp.org</a>.</li>
+                <li><span style='text-decoration:underline;'>Push to GitHub</span>: Similar to setting up a Git Repository, I starting off using the terminal 'add' and 'commit' commands my first several weeks, but later used VS Code and the GitHub Desktop App.</li>
+            </ol>
+        </div>
         
         <footer class="container-fluid">
             <p>Copyright © 
@@ -48,7 +61,7 @@
                 </script> 
                 codeTrackLift
             </p>
-            <a href="https://github.com/codetracklift" target="_blank"><img id="gitLogo" src="./pics/GitHub-Mark-64px.png" alt="GitHub Icon"></i
+            <a href="https://github.com/codetracklift" target="_blank"><img id="gitLogo" src="./pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></i
                 ></a>
         </footer>
 
