--- a/index.html
+++ b/index.html
@@ -55,8 +55,11 @@
                 <li><span style="text-decoration:underline;color:white;">Use a Custom Domain</span> (Optional): GitHub has some pretty detailed documentation that describes how to set up a custom domain, specifically with adding the DNS IP addresses.  Check out this <a href="https://docs.github.com/en/pages/configuring-a-custom-domain-for-your-github-pages-site/managing-a-custom-domain-for-your-github-pages-site" target="_blank">GitHub Documentation Link</a>.</li>
             </ol>
             <p style="padding-top:-1rem; padding-bottom:2rem;">Please let me know with any suggestions, or comments.  Thank you again for visiting my site, and happy coding!</p>
-            <p style="text-align:end;font-style:italic;padding:0;">- Pete, Feb 2022</p>
-            <p style="text-align:end;font-style:italic;padding:0;">Student @ MIT xPro</p>
+            <div>
+                
+                <p style="text-align:end;font-style:italic;padding:0;color:white;"><img src="./pics/profilepic.jpg" alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> - Pete, Feb 2022</p>
+                <p style="text-align:end;font-style:italic;padding:0;color:white;">Student @ MIT xPro</p>
+            </div>
         </div>
         
         <footer class="container-fluid">
