dev page navbar

--- a/dev.html
+++ b/dev.html
@@ -21,6 +21,8 @@
 
         <!-- My CSS & JS -->
         <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/introanimations.css">
+        <link rel="stylesheet" href="./css/navbar.css">
         <script src='./index.js' defer></script>
         <link rel="shortcut icon" type='image/x-icon' href="./favicon.ico">
 
@@ -28,14 +30,46 @@
     </head>
 
     <body>
+
+        <nav class="navbar navbar-expand-sm navbar-dark bg-transparent">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">About Me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">My Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Experience</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Projects</a>
+                        </li>
+                    </ul>
+                    <!-- <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form> -->
+                </div>
+            </div>
+          </nav>
         
         <div id='welcome' class='container-fluid animationBorder'>
             <figure class=''>
                 <h1 class='animationDropDown'><span class='animationTurnOpaque'>Thanks for visiting</span></h1>
                 <h1 class='animationSlideFromLeft'><span>code</span><span>By</span><span class='animationExpand'>Pe</span><span class='animationTurnGreen'>te</span></h1>
-                <!-- <hr> -->
             </figure>
         </div>
+
+        <figure class=''>
+            <h2 class='animationFlipIn'>From Pharmaceuticals<br>to Software Development</h2>
+        </figure>
         
         <footer class="container-fluid">
             <p>Copyright © 
@@ -44,7 +78,7 @@
                 </script> 
                 codeTrackLift
             </p>
-            <a href="https://github.com/codetracklift" target="_blank"><img id="gitLogo" src="./pics/GitHub-Mark-64px.png" alt="GitHub Icon"></i
+            <a href="https://github.com/codetracklift" target="_blank"><img id="gitLogo" src="./pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></i
                 ></a>
         </footer>
 
