dev footer fixed-bottom

--- a/dev.html
+++ b/dev.html
@@ -71,7 +71,7 @@
             <h2 class='animationFlipIn'>From Pharmaceuticals<br>to Software Development</h2>
         </figure>
         
-        <footer class="container-fluid">
+        <footer class="container-fluid fixed-bottom">
             <p>Copyright © 
                 <script>
                     document.write(new Date().getFullYear())
