index redirect to pages

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -8,7 +8,7 @@
         <meta name='description' content='LeNova, Inc. Professional Engineering Services'>
 
         <!-- Bootstrap Link -->
-        <link rel="stylesheet" href="./libraries/bootstrap.min.css">
+        <link rel="stylesheet" href="../libraries/bootstrap.min.css">
 
         <!-- Font CSS Links -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,14 +17,14 @@
 
 
         <!-- Scroll Magic JS -->
-        <script src="./libraries/ScrollMagic.min.js"></script>
+        <script src="../libraries/ScrollMagic.min.js"></script>
 
         <!-- My CSS & JS -->
-        <link rel="stylesheet" href="./css/style.css">
-        <link rel="stylesheet" href="./css/introanimations.css">
-        <link rel="stylesheet" href="./css/navbar.css">
-        <script src='./index.js' defer></script>
-        <link rel="shortcut icon" type='image/x-icon' href="./favicon.ico">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/introanimations.css">
+        <link rel="stylesheet" href="../css/navbar.css">
+        <script src='../index.js' defer></script>
+        <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
         <title>codeByPete</title>
     </head>
@@ -78,11 +78,11 @@
                 </script> 
                 codeTrackLift
             </p>
-            <a href="https://github.com/codetracklift" target="_blank"><img id="gitLogo" src="./pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></i
+            <a href="https://github.com/codetracklift" target="_blank"><img id="gitLogo" src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></i
                 ></a>
         </footer>
 
         <!-- JS Libraries: Bootstrap -->
-        <script src="./libraries/bootstrap.min.js"></script>
+        <script src="../libraries/bootstrap.min.js"></script>
     </body>
 </html>
