welcome footer position

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -58,7 +58,7 @@
                     </form> -->
                 </div>
             </div>
-          </nav>
+        </nav>
         
         <div id='welcome' class='container-fluid animationBorder'>
             <figure class=''>
@@ -67,11 +67,11 @@
             </figure>
         </div>
 
-        <figure class=''>
-            <h2 class='animationFlipIn'>From Pharmaceuticals<br>to Software Development</h2>
+        <figure class='animationFlipIn'>
+            <h2>From Pharmaceuticals<br>to Software Development</h2>
         </figure>
         
-        <footer class="container-fluid fixed-bottom">
+        <footer class="container-fluid">
             <p>Copyright © 
                 <script>
                     document.write(new Date().getFullYear())
