--- a/pages/blog01.html
+++ b/pages/blog01.html
@@ -20,7 +20,7 @@
         <script src="../libraries/ScrollMagic.min.js"></script>
 
         <!-- My CSS & JS -->
-        <link rel="stylesheet" href="../css/construction.css">
+        <link rel="stylesheet" href="../css/blog.css">
         <link rel="stylesheet" href="../css/navbar.css">
         <script src='../index.js' defer></script>
         <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
@@ -31,17 +31,17 @@
     <body>
         <nav class="navbar navbar-expand-sm navbar-dark bg-transparent">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="../pages/welcome.html"><img src='../pics/pharma2code_icon.gif' style="width:3rem;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">About Me</a>
+                            <a class="nav-link" aria-current="page" href="#">About Me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">My Blog</a>
+                            <a class="nav-link active" href="../pages/blog01.html">My Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Experience</a>
