--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -33,7 +33,7 @@
 
         <nav class="navbar navbar-expand-sm navbar-dark bg-transparent">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#"><img src='../pics/pharma2code_icon.gif' style="width:3rem;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -43,7 +43,7 @@
                             <a class="nav-link active" aria-current="page" href="#">About Me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">My Blog</a>
+                            <a class="nav-link" href="../pages/blog01.html">My Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Experience</a>
