welcome css and footer

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -20,7 +20,7 @@
         <script src="../libraries/ScrollMagic.min.js"></script>
 
         <!-- My CSS & JS -->
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/welcome.css">
         <link rel="stylesheet" href="../css/introanimations.css">
         <link rel="stylesheet" href="../css/navbar.css">
         <script src='../index.js' defer></script>
@@ -71,7 +71,7 @@
             <h2>From Pharmaceuticals<br>to Software Development</h2>
         </figure>
         
-        <footer class="container-fluid">
+        <footer class="container-fluid fixed-bottom">
             <p>Copyright © 
                 <script>
                     document.write(new Date().getFullYear())
