--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -23,7 +23,7 @@
         <link rel="stylesheet" href="../css/welcome.css">
         <link rel="stylesheet" href="../css/introanimations.css">
         <link rel="stylesheet" href="../css/navbar.css">
-        <script src='../index.js' defer></script>
+        <script src='../js/index.js' defer></script>
         <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
         <title>codeByPete</title>
@@ -33,14 +33,16 @@
 
         <nav class="navbar navbar-expand-sm navbar-dark bg-transparent">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src='../pics/pharma2code_icon.gif' style="width:3rem;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <img src='../pics/pharma2code_icon.gif' style="width:2rem;">
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">About Me</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/welcome.html">Welcome</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">About Me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/blog01.html">My Blog</a>
