added header to sm screen

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <meta name='description' content='LeNova, Inc. Professional Engineering Services'>
+        <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
 
         <!-- Bootstrap Link -->
         <link rel="stylesheet" href="../libraries/bootstrap.min.css">
@@ -29,21 +29,22 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-transparent">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <img src='../pics/pharma2code_icon.gif' style="width:2rem;">
                 </button>
+                <h3 class="d-block d-sm-none" style="font-style:italic;letter-spacing:2vw;"><span style="color:white;">Code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span></h3>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="../pages/welcome.html">Welcome</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">About Me</a>
+                            <a class="nav-link" aria-current="page" href="../pages/about.html">About Me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="../pages/blog01.html">My Blog</a>
+                            <a class="nav-link active" href="../pages/blog.html">My Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Experience</a>
