--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <meta name='description' content='codeByPete Pete Chu Web Developer Portfolio'>
+        <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
 
         <!-- Index.html Re-Direct Here -->
         <meta http-equiv="refresh" content="0; URL=./pages/construction.html" />
@@ -24,7 +24,6 @@
 
         <!-- My CSS & JS -->
         <link rel="stylesheet" href="./css/construction.css">
-        <script src='./index.js' defer></script>
         <link rel="shortcut icon" type='image/x-icon' href="./favicon.ico">
 
         <title>codeByPete</title>
