--- a/pages/about.html
+++ b/pages/about.html
@@ -20,8 +20,7 @@
         <script src="../libraries/ScrollMagic.min.js"></script>
 
         <!-- My CSS & JS -->
-        <link rel="stylesheet" href="../css/welcome.css">
-        <link rel="stylesheet" href="../css/introanimations.css">
+        <link rel="stylesheet" href="../css/about.css">
         <link rel="stylesheet" href="../css/navbar.css">
         <script src='../js/index.js' defer></script>
         <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
@@ -30,20 +29,19 @@
     </head>
 
     <body>
-
         <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <img src='../pics/pharma2code_icon.gif' style="width:2rem;">
                 </button>
-                <!-- <h3 class="d-block d-sm-none" style="font-style:italic;letter-spacing:2vw;"><span style="color:white;">Code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span></h3> -->
+                <h3 class="d-block d-sm-none" style="font-style:italic;letter-spacing:2vw;"><span style="color:white;">Code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span></h3>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../pages/welcome.html">Welcome</a>
+                            <a class="nav-link" aria-current="page" href="../pages/welcome.html">Welcome</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../pages/about.html">About Me</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/about.html">About Me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/blog.html">My Blog</a>
@@ -62,21 +60,21 @@
                 </div>
             </div>
         </nav>
-        
-        <div id='welcome' class='container-fluid animationBorder'>
-            <figure class=''>
-                <h1 class='animationDropDown'><span class='animationTurnOpaque'>Thanks for visiting</span></h1>
-                <h1 class='animationSlideFromLeft'><span>code</span><span>By</span><span class='animationExpand'>Pe</span><span class='animationTurnGreen'>te</span></h1>
-            </figure>
-        </div>
 
-        <figure class='animationFlipIn'>
-            <h2>stationInLife.<span style="color:white;">replace</span>(<br>
-                '<span style="color:#00857c;">Pharmaceutical Engineering</span>',<br>
-                '<span style="color:white;">Software Development</span>');</h2>
-        </figure>
+        <div id='article1' class="container-fluid">
+                <p>Hello!</p>
+                <p>My name is Pete Chu and I have been a professional in the Pharmaceutical industry for the past 20 years. My technical specialities include Facility Start-up, Equipment and System Validation, as well as Quality Engineering. </p>
+                <p>I have a bachelor's degree in Biological Sciences from the University of Delaware. My experience includes Validation Consulting with Integrated Project Services (IPS), as well as direct employment with Janssen (formerly Centocor, Johnson & Johnson), and Eisai, Inc. (formerly Morphotek).</p>
+                <p>With Janssen and Eisai, I was responsible for leading equipment and system qualification efforts as a Senior Validation Engineer. In 2012, I transitioned to a Senior Quality Engineer role within Eisai and was responsible for site metrics, quality dispositions, change controls, and leading investigations. In 2017, I was managing the GMP Document Control and Quality Engineering teams.</p> 
+                <p>In December of 2021, I stumbled upon freeCodeCamp.org and rediscovered my childhood passion of coding and technology. I am currently at the midpoint of my career and have decided to part ways with Eisai in order to pursue a career change that is in line with a personal passion.</p>
+                <p>I look forward to working with you on this exciting part of my journey!</p>
+                <p style="text-align:end;font-style:italic;padding:0;color:white;"><img src="../pics/profilepic.jpg" alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;">Best Regards,</p>
+                <p style="text-align:end;font-style:italic;padding:0;color:white;">- Pete Chu</p>
+                <p style="text-align:end;font-style:italic;padding:0;color:white;">Student @ MIT xPro</p>
+            </div>
+        </div>
         
-        <footer class="container-fluid fixed-bottom">
+        <footer class="container-fluid">
             <p>Copyright © 
                 <script>
                     document.write(new Date().getFullYear())
