building out exp page

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -47,7 +47,7 @@
                             <a class="nav-link active" href="../pages/blog.html">My Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Experience</a>
+                            <a class="nav-link" href="../pages/experience.html">Experience</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Projects</a>
