--- a/pages/experience.html
+++ b/pages/experience.html
@@ -108,7 +108,7 @@
                 <p>Janssen Pharmaceuticals is a wholly-owned by Johnson & Johnson, and acquired Centocor Biopharmaceutical in 1999.  Centocor was a world leader in monoclonal antibody production and cell therapy technology.  I joined Centocor R&D / J&J in 2006 as a Validation Engineer II.</p>
                 <p>My roles and responsibilities included:</p>
                 <ul>
-                    <li>Quality Lead for the Quality Management Systems (QMS): Document Control, Validation, Facilities, Automation, Deviation Management, and Change Control.</li>
+                    <li>Managing a multi-site laboratory equipment qualification program, day-to-day oversight of 2-3 validation consultants </li>
                     <li>Manage, mentor, and develop junior validation / quality staff.  Provide guidance on calibration, preventive maintenance, and process tolerance programs.</li>
                     <li>Develop procedures to support Commercialization and Pilot Plant Commissioning/Qualification/Validation (CQV) program.</li>
                     <li>Lead Change Management Review Board includes: collaborating with stakeholders, requesting and proposing changes, assessing impact and establishing justification, establishing an implementation plan, execution and closure of implementation activities, and providing high-level summaries and metrics.</li>
