lenova exp added

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -61,7 +61,33 @@
             </div>
         </nav>
 
-        <div id='article1' class="container-fluid">
+        <div id='article3' class="container-fluid">
+            <div class="row">
+                <div class="col-md-6">    
+                    <h3>Company Name:</h3><h5>LeNova, Inc. <img class='px-2' src="../pics/lenovainc_logo.gif" alt="Eisai Logo" style="height:2.5rem;"></h5>
+                </div>
+                <div class="col-md-6">    
+                    <h3>Employment Period:</h3><h5>Jan 2022 - Present</h5>
+                </div>
+            </div>
+            <div>
+                <span class="h3" style="color:silver;font-style:italic;">Position:</span><span class='h5 px-3'style='color:white;'>Web Developer</span>
+            </div>
+            <div>
+                <span class="h3" style="color:silver;font-style:italic;">Description:</span><span class='h5 px-3'style='color:white;'><a href="https://www.lenovainc.com/" target="_blank">LeNova, Inc. Website</a></span>
+            </div>
+            <p>LeNova, Inc. is licensed and professional engineering and technology solutions provider with a focus on the Life Sciences and Commercial industries.  LeNova, Inc. has a long working history in the biopharmaceutical space and has offices in Pennsylvania and Florida.</p>
+            <p>My roles and responsibilities included:</p>
+            <ul>
+               <li>Research business goals, customers and their expected behavior.</li>
+               <li>Propose and update website designs and layouts with key stakeholders.</li>
+               <li>Develop the website using HTML, CSS, and JavaScript.</li>
+               <li>Ensure website is fully mobile and browser compatible.</li>
+               <li>Testing of all features and support retainer.</li>
+            </ul>
+        </div>
+
+        <div id='article3' class="container-fluid">
             <div class="row">
                 <div class="col-md-6">    
                     <h3>Company Name:</h3><h5>Eisai, Inc. <img class='px-2' src="../pics/eisai_logo.png" alt="Eisai Logo" style="width:5rem;"></h5>
@@ -76,18 +102,18 @@
             <div>
                 <span class="h3" style="color:silver;font-style:italic;">Description:</span><span class='h5 px-3'style='color:white;'><a href="https://us.eisai.com/" target="_blank">Eisai Website</a></span>
             </div>
-                <p>Eisai is a research based human health care company that discovers, develops, and markets products throughout the world.  I started at Eisai when it was still known as Morphotek and I was initially hired as a Senior Validation Specialist, but transitioned to Quality in 2012.</p>
-                <p>My roles and responsibilities included:</p>
-                <ul>
-                    <li>Quality Lead for the Quality Management Systems (QMS): Document Control, Validation, Facilities, Automation, Deviation Management, and Change Control.</li>
-                    <li>Manage, mentor, and develop junior validation / quality staff.  Provide guidance on calibration, preventive maintenance, and process tolerance programs.</li>
-                    <li>Develop procedures to support Commercialization and Pilot Plant Commissioning/Qualification/Validation (CQV) program.</li>
-                    <li>Lead Change Management Review Board includes: collaborating with stakeholders, requesting and proposing changes, assessing impact and establishing justification, establishing an implementation plan, execution and closure of implementation activities, and providing high-level summaries and metrics.</li>
-                    <li>Lead Deviation Management Program, includes: publishing weeekly compliance updates, lead investigator for site deviations, mentored and trained junior staff on deviations and investigation writing, generated metrics and trends.</li>
-                    <li>Lead and manage CQV contract/consulting firms, including their daily activities to successfully qualify and release equipment used in the manufacture of Bulk Drug Substance (BDS) and Antibody Drug Intermediate (ADI).</li>
-                    <li>Successfully support manufacturing facility and associated QMS documentation during Regulatory Inspections and Internal Audits.</li>
-                    <li>Continuous Improvement accomplishments: Establishing a Controlled Drawing Process and Workflow, Enhancing Computerized Maintenance Management System (CMMS) to support routine validation maintenance activities, Establishing an Engineering Change Request (ECR) process to enhance the level of controls and prioritization of change type and resource utilization.</li>
-                </ul>
+            <p>Eisai is a research based human health care company that discovers, develops, and markets products throughout the world.  I started at Eisai when it was still known as Morphotek and I was initially hired as a Senior Validation Specialist, but transitioned to Quality in 2012.</p>
+            <p>My roles and responsibilities included:</p>
+            <ul>
+                <li>Quality Lead for the Quality Management Systems (QMS): Document Control, Validation, Facilities, Automation, Deviation Management, and Change Control.</li>
+                <li>Manage, mentor, and develop junior validation / quality staff.  Provide guidance on calibration, preventive maintenance, and process tolerance programs.</li>
+                <li>Develop procedures to support Commercialization and Pilot Plant Commissioning / Qualification / Validation (CQV) program.</li>
+                <li>Lead Change Management Review Board includes: collaborating with stakeholders, requesting and proposing changes, assessing impact and establishing justification, establishing an implementation plan, execution and closure of implementation activities, and providing high-level summaries and metrics.</li>
+                <li>Lead Deviation Management Program, includes: publishing weeekly compliance updates, lead investigator for site deviations, mentored and trained junior staff on deviations and investigation writing, generated metrics and trends.</li>
+                <li>Lead and manage CQV contract/consulting firms, including their daily activities to successfully qualify and release equipment used in the manufacture of Bulk Drug Substance (BDS) and Antibody Drug Intermediate (ADI).</li>
+                <li>Successfully support manufacturing facility and associated QMS documentation during Regulatory Inspections and Internal Audits.</li>
+                <li>Continuous Improvement accomplishments: Establishing a Controlled Drawing Process and Workflow, Enhancing Computerized Maintenance Management System (CMMS) to support routine validation maintenance activities, Establishing an Engineering Change Request (ECR) process to enhance the level of controls and prioritization of change type and resource utilization.</li>
+            </ul>
         </div>
 
         <div id='article2' class="container-fluid">
@@ -105,18 +131,45 @@
             <div>
                 <span class="h3" style="color:silver;font-style:italic;">Description:</span><span class='h5 px-3'style='color:white;'><a href="https://www.janssen.com/" target="_blank">Janssen Website</a></span>
             </div>
-                <p>Janssen Pharmaceuticals is a wholly-owned by Johnson & Johnson, and acquired Centocor Biopharmaceutical in 1999.  Centocor was a world leader in monoclonal antibody production and cell therapy technology.  I joined Centocor R&D / J&J in 2006 as a Validation Engineer II.</p>
-                <p>My roles and responsibilities included:</p>
-                <ul>
-                    <li>Managing a multi-site laboratory equipment qualification program, day-to-day oversight of 2-3 validation consultants </li>
-                    <li>Manage, mentor, and develop junior validation / quality staff.  Provide guidance on calibration, preventive maintenance, and process tolerance programs.</li>
-                    <li>Develop procedures to support Commercialization and Pilot Plant Commissioning/Qualification/Validation (CQV) program.</li>
-                    <li>Lead Change Management Review Board includes: collaborating with stakeholders, requesting and proposing changes, assessing impact and establishing justification, establishing an implementation plan, execution and closure of implementation activities, and providing high-level summaries and metrics.</li>
-                    <li>Lead Deviation Management Program, includes: publishing weeekly compliance updates, lead investigator for site deviations, mentored and trained junior staff on deviations and investigation writing, generated metrics and trends.</li>
-                    <li>Lead and manage CQV contract/consulting firms, including their daily activities to successfully qualify and release equipment used in the manufacture of Bulk Drug Substance (BDS) and Antibody Drug Intermediate (ADI).</li>
-                    <li>Successfully support manufacturing facility and associated QMS documentation during Regulatory Inspections and Internal Audits.</li>
-                    <li>Continuous Improvement accomplishments: Establishing a Controlled Drawing Process and Workflow, Enhancing Computerized Maintenance Management System (CMMS) to support routine validation maintenance activities, Establishing an Engineering Change Request (ECR) process to enhance the level of controls and prioritization of change type and resource utilization.</li>
-                </ul>
+            <p>Janssen Pharmaceuticals is a wholly-owned by Johnson & Johnson, and acquired Centocor Biopharmaceutical in 1999.  Centocor was a world leader in monoclonal antibody production and cell therapy technology.  I joined Centocor R&D / J&J in 2006 as a Validation Engineer II.</p>
+            <p>My roles and responsibilities included:</p>
+            <ul>
+                <li>Managing a multi-site laboratory equipment qualification program.</li>
+                <li>Managing a plant floor automation program that supports two pilot plant facilities and one QC laboratory.</li>
+                <li>Responsible for day-to-day activities of Validation and Automation Consultants, includes: project scope, budget, schedule, and cross-functional communications.</li>
+                <li>Conducting and overseeing investigations from qualification discrepancies and atypical events; includes root cause analysis, proposing and implementing corrective actions, and effectiveness checks</li>
+                <li>Providing technical support for production deviations and audit observations, includes initiating atypical events, conducting event investigations, and implementing corrective actions</li>
+                <li>Supporting lean manufacturing efficiency initiatives and conducting Failure Mode and Effects Analysis (FMEA)</li>
+                <li>Performing, executing, and overseeing qualification studies for sterilization, cleaning, process equipment, and systems</li>
+                <li>Authoring, reviewing, revising and approving a variety of cGMP documentation; including but not limited to the following: SOPs, site qualification master plans, design documents, atypical events, event investigations, corrective action plans, and change control</li>
+            </ul>
+        </div>
+
+        <div id='article1' class="container-fluid">
+            <div class="row">
+                <div class="col-md-6">    
+                    <h3>Company Name:</h3><h5>Integrated Project Services<img class='px-2' src="../pics/ipsdb_logo.gif" alt="Eisai Logo" style="height:2.5rem;"></h5>
+                </div>
+                <div class="col-md-6">    
+                    <h3>Employment Period:</h3><h5>Feb 2002 - Sep 2006</h5>
+                </div>
+            </div>
+            <div>
+                <span class="h3" style="color:silver;font-style:italic;">Position:</span><span class='h5 px-3'style='color:white;'>Validation Specialist</span>
+            </div>
+            <div>
+                <span class="h3" style="color:silver;font-style:italic;">Description:</span><span class='h5 px-3'style='color:white;'><a href="https://www.ipsdb.com/" target="_blank">IPS Website</a></span>
+            </div>
+            <p>Integrated Project Services is a fully integrated, design-build engineering firm specializing in the life sciences and semiconductor industries.  I joined IPS in 2002 after graduated from the University of Delaware with a Bachelor's Degree in Biological Sciences.</p>
+            <p>My roles and responsibilities included:</p>
+            <ul>
+                <li>Detailed preparation, execution, and review of validation protocols, test scripts, and reports, commissioning documentation, engineering turnover packages, and standard operating procedures.</li>
+                <li>Proficient in operation of Emerson DeltaV software, experienced in reading and interpreting run logic </li>
+                <li>Performance Qualifications for Steam-In-Place procedures</li>
+                <li>Computer system validation support during all phases of product development life cycle and implementation</li>
+                <li>Calibration, qualification, and utilization of a variety of validation equipment, including the Kaye Validator 2000</li>
+                <li>Correspondence with engineering, maintenance, validation, vendors, owners, and quality assurance.</li>
+            </ul>
         </div>
         
         <footer class="container-fluid">
