--- a/pages/about.html
+++ b/pages/about.html
@@ -68,8 +68,8 @@
                 <p>With Janssen and Eisai, I was responsible for leading equipment and system qualification efforts as a Senior Validation Engineer. In 2012, I transitioned to a Senior Quality Engineer role within Eisai and was responsible for site metrics, quality dispositions, change controls, and leading investigations. In 2017, I was managing the GMP Document Control and Quality Engineering teams.</p> 
                 <p>In December of 2021, I stumbled upon freeCodeCamp.org and rediscovered my childhood passion of coding and technology. I am currently at the midpoint of my career and have decided to part ways with Eisai in order to pursue a career change that is in line with a personal passion.</p>
                 <p>I look forward to working with you on this exciting part of my journey!</p>
-                <p style="text-align:end;font-style:italic;padding:0;color:white;"><img src="../pics/profilepic.jpg" alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;">Best Regards,</p>
-                <p style="text-align:end;font-style:italic;padding:0;color:white;">- Pete Chu</p>
+                <p style="text-align:end;font-style:italic;padding:0;color:white;"><img src="../pics/profilepic.jpg" alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 4rem -3.5rem 0;">Best Regards,</p>
+                <p style="text-align:end;font-style:italic;padding:0;color:white;">Pete Chu, Feb 2022</p>
                 <p style="text-align:end;font-style:italic;padding:0;color:white;">Student @ MIT xPro</p>
             </div>
         </div>
