type in lenova desc and pill size up to 2.5rem

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -32,7 +32,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <img src='../pics/pharma2code_icon.gif' style="width:2rem;">
+                    <img src='../pics/pharma2code_icon.gif' style="width:2.5rem;">
                 </button>
                 <h3 class="d-block d-sm-none" style="font-style:italic;letter-spacing:2vw;"><span style="color:white;">Code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span></h3>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -76,7 +76,7 @@
             <div>
                 <span class="h3" style="color:silver;font-style:italic;">Description:</span><span class='h5 px-3'style='color:white;'><a href="https://www.lenovainc.com/" target="_blank">LeNova, Inc. Website</a></span>
             </div>
-            <p>LeNova, Inc. is licensed and professional engineering and technology solutions provider with a focus on the Life Sciences and Commercial industries.  LeNova, Inc. has a long working history in the biopharmaceutical space and has offices in Pennsylvania and Florida.</p>
+            <p>LeNova, Inc. is a licensed engineering and technology solutions provider with a focus on the Life Sciences and Commercial industries.  LeNova, Inc. was established in 1997 and has a long working history in the biopharmaceutical space and has offices in Pennsylvania and Florida.  I joined LeNova in 2022 to help with business expansion by developing their website.</p>
             <p>My roles and responsibilities included:</p>
             <ul>
                <li>Research business goals, customers and their expected behavior.</li>
