reversed last wording change

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -72,8 +72,8 @@
 
         <figure class='animationFlipIn'>
             <h2 style="letter-spacing:0.125rem;">stationInLife.<span style="color:white;">replace</span>(<br>
-                '<span style="color:#00857c;">Pharmaceutical Engineering</span>',<br>
-                '<span style="color:lime;">Software Development</span>');</h2>
+                '<span style="color:#00857c;">Pharmaceutical Engineer</span>',<br>
+                '<span style="color:lime;">Software Developer</span>');</h2>
         </figure>
         
         <footer class="container-fluid fixed-bottom">
